# goit-pythonweb-hw-05

./: .gitignore  alembic.ini  my_select.py  pyproject.toml  requirements.txt  seed.py
conf/: db.py
entity/: models.py
migration/versions/: 37781a1f2333_initial_migration.py  8aeaba9ea3bd_initial_migration.py  d9109a9d1d1b_initial_migration.py
